# TESS-IDA-TOOLS

./: .gitignore  LICENSE  README.md  get-tess-ida.md  get-tess-ida.py  justfile  pyproject.toml
doc/: IDA.md  TESS-IDA-TOOLS-Example.html  TESS-IDA-TOOLS-Example.ipynb  TESS-IDA-TOOLS-Example.md  auxiliar.md  example.md  get-tess-ida.md  install.md  utilities.md
src/tess/: __init__.py  _version.py
src/tess/ida/: __init__.py  admdb.py  constants.py  database.py  download.py  ecsv.py  main.py  pipeline.py  timeseries.py  transform.py  utils.py
src/tess/ida/dbase/: __init__.py  api.py  schema.py
src/tess/ida/dbase/sql/: schema.sql
src/tess/ida/utils/: parser.py  utils.py
test/: test_cli.py
